src/objects/Lookup_Purpose_of_Refinance_Keyword__mdt.object
<CustomObject>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Applied_for__c</fullName>
        <label>Mortgage Applied for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FHA Traditional HECM</fullName>
                    <default>true</default>
                    <label>FHA Traditional HECM</label>
                </value>
                <value>
                    <fullName>HECM to HECM Refinance</fullName>
                </value>
                <value>
                    <fullName>HECM for Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HECM</fullName>
                    <default>true</default>
                    <label>HECM</label>
                </value>
                <value>
                    <fullName>HELO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                    <default>true</default>
                    <label>ARM</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Lookup for mapping to Purpose of Refinance keyword.</description>
    <label>Lookup Purpose of Refinance Keyword</label>
    <pluralLabel>Lookup Purpose of Refinance Keywords</pluralLabel>
    <listViews>
        <fullName>Details</fullName>
        <columns>Keyword__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Mortgage_Applied_for__c</columns>
        <columns>Rate_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
    </listViews>
</CustomObject>